# cnn

./: .history
examples/: CMakeLists.txt  get_char_embeddings.cc  get_monolingual_dict.cc  n_best_words.cc  parallel-encdec.cc  rnnlm-args.cc  run_encdec.cc  score_parallel_encdec.cc  score_rnnlm-args.cc  test.txt  test2.txt  weighted-parallel-encdec.cc
